Fixed spacing.
git-svn-id: https://svn.apache.org/repos/asf/incubator/ignite/site/trunk@1693534 13f79535-47bb-0310-9956-ffa450edef68

--- a/css/all.css
+++ b/css/all.css
@@ -7871,6 +7871,11 @@ div#banner1 p {
 .footer-nav > ul {
   padding-left: 50px;
 }
+@media (max-width: 767px) {
+  .footer-nav > ul {
+    padding: 5px 0 10px 0;
+  }
+}
 
 #header {
   background: rgba(54, 54, 54, 0.95);
@@ -7975,6 +7980,7 @@ section.page-section {
   padding: 90px 0 10px 0;
   margin-top: -70px;
   border-bottom: 2px dotted #ddd;
+  margin-bottom: 20px;
 }
 section.page-section table.twosides {
   padding: 0 !important;
@@ -7991,7 +7997,6 @@ section.page-section h2 {
   color: #333;
   padding: 0 0 20px 0;
   text-align: left;
-  margin-top: 20px;
 }
 section.page-section h3 {
   font-size: 20px;
@@ -8337,5 +8342,14 @@ section.usecase-page-section .first {
 @media (max-width: 767px) {
   .syntaxhighlighter table td.gutter .line {
     display: none !important;
+  }
+}
+
+.ignite-img {
+  margin: 45px;
+}
+@media (max-width: 767px) {
+  .ignite-img {
+    margin: 17px;
   }
 }
