--- a/scss/ignite.scss
+++ b/scss/ignite.scss
@@ -296,6 +296,10 @@ div#banner1 {
 
 .footer-nav > ul {
     padding-left: 50px;
+
+    @media (max-width:$mobile) {
+        padding: 5px 0 10px 0;
+    }
 }
 
 #header {
@@ -425,6 +429,7 @@ section.page-section {
     padding: 90px 0 10px 0;
     margin-top: -70px;
     border-bottom: 2px dotted #ddd;
+    margin-bottom: 20px;
 
     table.twosides {
         padding: 0 !important;
@@ -443,7 +448,6 @@ section.page-section {
         color: #333;
         padding: 0 0 20px 0;
         text-align: left;
-        margin-top: 20px;
     }
     h3 {
             font-size: 20px;
@@ -843,5 +847,13 @@ iframe {
 .syntaxhighlighter table td.gutter .line {
     @media (max-width: $mobile) {
         display: none !important;
+    }
+}
+
+.ignite-img {
+    margin: 45px;
+
+    @media (max-width: $mobile) {
+        margin: 17px;
     }
 }
